@@ -67,3 +67,5 @@ MOD_MENU_LOGOUT="Logout"
 MOD_MENU_SITE_MAINTENANCE="Site Maintenance"
 MOD_MENU_SYSTEM_INFORMATION="System Information"
 
+MOD_MENU_XML_DESCRIPTION="This module shows the main admin navigation module"
+
