@@ -37,6 +37,7 @@ $ -> Language fix or change
 ^ Refactored mod_latest ini/keys
 ^ Refactored mod_logged ini/keys + added some
 ^ Refactored mod_login (admin) ini/keys. Prevented it from being unpublished.
+^ Completed refactoring of mod_menu (admin) ini/keys.
 
 06-Feb-2010 Mark Dexter
 + Test Commit (remove later)
